fixed the import in examples.ipynb

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [{},],
+   "outputs": [],
    "source": [
     "from src.buckinghampi import BuckinghamPi"
    ]
@@ -19,18 +19,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'BuckinghamPi' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-667e586ff30f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBuckinghamPi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'm l t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'u'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'l/t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rho'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'm/(l**3)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mu'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'm/(l*t)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dx'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'l'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'BuckinghamPi' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5040/5040 [00:14<00:00, 348.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  1.  1.  0.  0.  0.  0.]\n",
+      " [ 1. -3. -1.  1.  0.  1.  0.]\n",
+      " [-1.  0. -1.  0.  1.  0. -1.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.]]\n",
+      "-----------------\n",
+      "N*dt\n",
+      "dx/D\n",
+      "D**2*N*rho/mu\n",
+      "u/(D*N)\n",
+      "-----------------\n",
+      "N*dt\n",
+      "dx/D\n",
+      "mu/(D**2*N*rho)\n",
+      "u/(D*N)\n",
+      "-----------------\n",
+      "N*dt\n",
+      "dx/D\n",
+      "dt*u/D\n",
+      "D**2*rho/(dt*mu)\n",
+      "-----------------\n",
+      "N*dt\n",
+      "dx/D\n",
+      "dt*u/D\n",
+      "dt*mu/(D**2*rho)\n",
+      "-----------------\n",
+      "D/dx\n",
+      "N*dt\n",
+      "mu/(N*dx**2*rho)\n",
+      "u/(N*dx)\n",
+      "-----------------\n",
+      "D/dx\n",
+      "u/(N*dx)\n",
+      "N*dt\n",
+      "N*dx**2*rho/mu\n",
+      "-----------------\n",
+      "N*dt\n",
+      "dt*u/dx\n",
+      "D/dx\n",
+      "dx**2*rho/(dt*mu)\n",
+      "-----------------\n",
+      "N*dt\n",
+      "dt*u/dx\n",
+      "D/dx\n",
+      "dt*mu/(dx**2*rho)\n",
+      "-----------------\n",
+      "D*sqrt(N)*sqrt(rho)/sqrt(mu)\n",
+      "N*dt\n",
+      "sqrt(N)*dx*sqrt(rho)/sqrt(mu)\n",
+      "sqrt(rho)*u/(sqrt(N)*sqrt(mu))\n",
+      "-----------------\n",
+      "D*N/u\n",
+      "N*dt\n",
+      "N*dx/u\n",
+      "rho*u**2/(N*mu)\n",
+      "-----------------\n",
+      "D**2*N*rho/mu\n",
+      "dt*mu/(D**2*rho)\n",
+      "D*rho*u/mu\n",
+      "dx/D\n",
+      "-----------------\n",
+      "D*N/u\n",
+      "dt*u/D\n",
+      "D*rho*u/mu\n",
+      "dx/D\n",
+      "-----------------\n",
+      "N*dt\n",
+      "sqrt(dt)*sqrt(rho)*u/sqrt(mu)\n",
+      "D*sqrt(rho)/(sqrt(dt)*sqrt(mu))\n",
+      "dx*sqrt(rho)/(sqrt(dt)*sqrt(mu))\n",
+      "-----------------\n",
+      "N*dt\n",
+      "dt*rho*u**2/mu\n",
+      "D/(dt*u)\n",
+      "dx/(dt*u)\n",
+      "-----------------\n",
+      "D/dx\n",
+      "N*dx/u\n",
+      "dx*rho*u/mu\n",
+      "dt*u/dx\n",
+      "-----------------\n",
+      "dx*rho*u/mu\n",
+      "N*dx**2*rho/mu\n",
+      "D/dx\n",
+      "dt*mu/(dx**2*rho)\n",
+      "-----------------\n",
+      "D*N/u\n",
+      "N*dt\n",
+      "N*dx/u\n",
+      "N*mu/(rho*u**2)\n",
+      "-----------------\n",
+      "D*N/u\n",
+      "dt*u/D\n",
+      "mu/(D*rho*u)\n",
+      "dx/D\n",
+      "-----------------\n",
+      "N*dt\n",
+      "mu/(dt*rho*u**2)\n",
+      "D/(dt*u)\n",
+      "dx/(dt*u)\n",
+      "-----------------\n",
+      "D/dx\n",
+      "N*dx/u\n",
+      "mu/(dx*rho*u)\n",
+      "dt*u/dx\n",
+      "-----------------\n",
+      "N*mu/(rho*u**2)\n",
+      "D*rho*u/mu\n",
+      "dt*rho*u**2/mu\n",
+      "dx*rho*u/mu\n"
      ]
     }
    ],
@@ -61,18 +175,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'BuckinghamPi' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-40ad5052648f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBuckinghamPi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'm l t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mm2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'P'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'm*l**2/(t**3)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mm2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mu'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'm/(l*t)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mm2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'N'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'1/t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mm2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_variable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'D'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'l'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'BuckinghamPi' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 120/120 [00:00<00:00, 413.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------\n",
+      "mu/(D**2*N*p)\n",
+      "P/(D**5*N**3*p)\n",
+      "-----------------\n",
+      "D*sqrt(N)*sqrt(p)/sqrt(mu)\n",
+      "P*p**(3/2)/(sqrt(N)*mu**(5/2))\n",
+      "-----------------\n",
+      "D*N**(3/5)*p**(1/5)/P**(1/5)\n",
+      "N**(1/5)*mu/(P**(2/5)*p**(3/5))\n",
+      "-----------------\n",
+      "P/(D**3*N**2*mu)\n",
+      "D**2*N*p/mu\n",
+      "-----------------\n",
+      "D**3*N**2*mu/P\n",
+      "D**5*N**3*p/P\n",
+      "-----------------\n",
+      "D**2*N*p/mu\n",
+      "D*P*p**2/mu**3\n",
+      "-----------------\n",
+      "D*P*p**2/mu**3\n",
+      "N*mu**5/(P**2*p**3)\n",
+      "-----------------\n",
+      "D**(3/2)*N*sqrt(mu)/sqrt(P)\n",
+      "sqrt(D)*sqrt(P)*p/mu**(3/2)\n",
+      "-----------------\n",
+      "P**(2/3)*p/(N**(1/3)*mu**(5/3))\n",
+      "D*N**(2/3)*mu**(1/3)/P**(1/3)\n",
+      "-----------------\n",
+      "D**(5/3)*N*p**(1/3)/P**(1/3)\n",
+      "mu/(D**(1/3)*P**(1/3)*p**(2/3))\n"
      ]
     }
    ],
@@ -90,6 +236,13 @@
     "  for term in piterms:\n",
     "    print(term)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -108,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   },
   "toc": {
    "colors": {
