--- a/buckinghampy gui.ipynb
+++ b/buckinghampy gui.ipynb
@@ -17,12 +17,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8e349ff4fe74408af399d07d6df6f94",
+       "model_id": "6eb9486e00e74fe399e893c9166d9f0e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(BoundedIntText(value=0, description='Number of Variables:', style=DescriptionSty…"
+       "HBox(children=(BoundedIntText(value=5, description='Number of Variables:', style=DescriptionStyle(description_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "59fbf8ec306b4bda803e56d726eacf6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Box(children=(Textarea(value='u', description='Name:', layout=Layout(height='32px', width='auto…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a93118f0feac416caa17bfd8b1634c81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
       ]
      },
      "metadata": {},
