changed the name of the file

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Buckingham $\\pi$:  Dimensional Analysis\n",
     "**Mokbel Karam, and Prof. Tony Saad (<a href='www.tsaad.net'>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**\n",
-    "<hr/>"
+    "<hr/>\n",
+    "The allowed physical dimensions from the international system of units are:  Ampere (A), Kelvin (K), second (T), Metre (L), Kilogram (M), Candela (Cd) and Mole (Mol)"
    ]
   },
   {
@@ -17,12 +18,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb9486e00e74fe399e893c9166d9f0e",
+       "model_id": "7beeab482fb74c81a8cd40d73fe6a586",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(BoundedIntText(value=5, description='Number of Variables:', style=DescriptionStyle(description_…"
+       "HBox(children=(BoundedIntText(value=0, continuous_update=True, description='Number of Variables:', style=Descr…"
       ]
      },
      "metadata": {},
@@ -31,12 +32,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59fbf8ec306b4bda803e56d726eacf6e",
+       "model_id": "57345743451748b58cfdf2bb0fe4f964",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Box(children=(Textarea(value='u', description='Name:', layout=Layout(height='32px', width='auto…"
+       "VBox(children=(Button(description='Generate', icon='check', style=ButtonStyle(), tooltip='Generate'),))"
       ]
      },
      "metadata": {},
@@ -45,7 +46,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a93118f0feac416caa17bfd8b1634c81",
+       "model_id": "68be363a694b43c2b97979f4730e383a",
        "version_major": 2,
        "version_minor": 0
       },
