updated the example

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,139 +71,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5040/5040 [00:12<00:00, 411.17it/s]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "-----------------\n",
-      "L/e\n",
-      "D/e\n",
-      "V*e*rho/mu\n",
-      "dp*e**2*rho/mu**2\n",
-      "-----------------\n",
-      "e/L\n",
-      "L**2*dp*rho/mu**2\n",
-      "D/L\n",
-      "L*V*rho/mu\n",
-      "-----------------\n",
-      "L/e\n",
-      "D/e\n",
-      "mu/(V*e*rho)\n",
       "dp/(V**2*rho)\n",
-      "-----------------\n",
-      "e/L\n",
-      "D/L\n",
-      "mu/(L*sqrt(dp)*sqrt(rho))\n",
-      "V*sqrt(rho)/sqrt(dp)\n",
-      "-----------------\n",
-      "L/e\n",
-      "D/e\n",
-      "mu/(sqrt(dp)*e*sqrt(rho))\n",
-      "V*sqrt(rho)/sqrt(dp)\n",
-      "-----------------\n",
-      "e/L\n",
-      "dp/(V**2*rho)\n",
-      "mu/(L*V*rho)\n",
-      "D/L\n",
-      "-----------------\n",
-      "L/e\n",
-      "D/e\n",
-      "V*e*rho/mu\n",
-      "dp*e/(V*mu)\n",
-      "-----------------\n",
-      "e/L\n",
-      "D/L\n",
-      "L**2*dp*rho/mu**2\n",
-      "V*mu/(L*dp)\n",
-      "-----------------\n",
-      "D/L\n",
-      "e/L\n",
-      "L*dp/(V*mu)\n",
-      "L*V*rho/mu\n",
-      "-----------------\n",
-      "e/D\n",
       "L/D\n",
-      "D**2*dp*rho/mu**2\n",
-      "V*mu/(D*dp)\n",
-      "-----------------\n",
-      "e/D\n",
-      "L/D\n",
-      "D*dp/(V*mu)\n",
-      "D*V*rho/mu\n",
-      "-----------------\n",
-      "e/D\n",
-      "L/D\n",
-      "mu/(D*sqrt(dp)*sqrt(rho))\n",
-      "V*sqrt(rho)/sqrt(dp)\n",
-      "-----------------\n",
-      "D/L\n",
-      "e/L\n",
-      "V*mu/(L*dp)\n",
-      "V**2*rho/dp\n",
-      "-----------------\n",
-      "L/D\n",
-      "e/D\n",
-      "V*mu/(D*dp)\n",
-      "V**2*rho/dp\n",
-      "-----------------\n",
-      "D*V*rho/mu\n",
-      "e/D\n",
-      "D**2*dp*rho/mu**2\n",
-      "L/D\n",
-      "-----------------\n",
-      "dp/(V**2*rho)\n",
-      "e/D\n",
       "mu/(D*V*rho)\n",
+      "-----------------\n",
+      "D*dp/(V*mu)\n",
+      "D*V*rho/mu\n",
       "L/D\n",
       "-----------------\n",
-      "V*mu/(dp*e)\n",
-      "L/e\n",
-      "V**2*rho/dp\n",
-      "D/e\n",
-      "-----------------\n",
-      "dp*e/(V*mu)\n",
-      "L*dp/(V*mu)\n",
-      "D*dp/(V*mu)\n",
-      "V**2*rho/dp\n",
-      "-----------------\n",
-      "D*V*rho/mu\n",
-      "V*e*rho/mu\n",
       "dp/(V**2*rho)\n",
+      "D/L\n",
+      "mu/(L*V*rho)\n",
+      "-----------------\n",
+      "dp/(V**2*rho)\n",
+      "D*V*rho/mu\n",
       "L*V*rho/mu\n",
       "-----------------\n",
-      "L/e\n",
-      "dp*e**2*rho/mu**2\n",
-      "D/e\n",
-      "V*mu/(dp*e)\n",
+      "L*dp/(V*mu)\n",
+      "D/L\n",
+      "L*V*rho/mu\n",
       "-----------------\n",
-      "D*sqrt(dp)*sqrt(rho)/mu\n",
-      "sqrt(dp)*e*sqrt(rho)/mu\n",
-      "V*sqrt(rho)/sqrt(dp)\n",
-      "L*sqrt(dp)*sqrt(rho)/mu\n"
+      "D**2*dp*rho/mu**2\n",
+      "D*V*rho/mu\n",
+      "L/D\n",
+      "-----------------\n",
+      "L**2*dp*rho/mu**2\n",
+      "L*V*rho/mu\n",
+      "D/L\n"
      ]
     }
    ],
    "source": [
-    "pipe_flow = BuckinghamPi(physical_dimensions='m l t')\n",
-    "pipe_flow.add_variable(name='dp',expression='m/(l*t**2)')\n",
+    "pipe_flow = BuckinghamPi()\n",
+    "pipe_flow.add_variable(name='dp',expression='m/(l*t**2)',select=True)\n",
     "pipe_flow.add_variable(name='V',expression='l/t')\n",
     "pipe_flow.add_variable(name='D',expression='l')\n",
     "pipe_flow.add_variable(name='rho',expression='m/(l**3)')\n",
     "pipe_flow.add_variable(name='L',expression='l')\n",
     "pipe_flow.add_variable(name='mu',expression='m/(l*t)')\n",
-    "pipe_flow.add_variable(name='e',expression='l')\n",
+    "# pipe_flow.add_variable(name='e',expression='l')\n",
     "\n",
     "pipe_flow.generate_pi_terms()\n",
     "\n",
@@ -232,57 +148,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 120/120 [00:00<00:00, 617.75it/s]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "-----------------\n",
-      "dx**2*rho/(dt*mu)\n",
-      "dt*u/dx\n",
-      "-----------------\n",
-      "dx*sqrt(rho)/(sqrt(dt)*sqrt(mu))\n",
-      "sqrt(dt)*sqrt(rho)*u/sqrt(mu)\n",
-      "-----------------\n",
-      "dx/(dt*u)\n",
+      "dx*rho*u/mu\n",
       "dt*rho*u**2/mu\n",
-      "-----------------\n",
-      "dx*rho*u/mu\n",
-      "dt*mu/(dx**2*rho)\n",
-      "-----------------\n",
-      "dx*rho*u/mu\n",
-      "dt*u/dx\n",
-      "-----------------\n",
-      "dt*mu/(dx**2*rho)\n",
-      "dt*u/dx\n",
-      "-----------------\n",
-      "dx/(dt*u)\n",
-      "mu/(dt*rho*u**2)\n",
       "-----------------\n",
       "mu/(dx*rho*u)\n",
       "dt*u/dx\n",
       "-----------------\n",
-      "dt*rho*u**2/mu\n",
-      "dx*rho*u/mu\n"
+      "dx*rho*u/mu\n",
+      "dt*u/dx\n",
+      "-----------------\n",
+      "dx*rho*u/mu\n",
+      "dt*mu/(dx**2*rho)\n"
      ]
     }
    ],
    "source": [
-    "stability = BuckinghamPi('M L T')\n",
+    "stability = BuckinghamPi()\n",
     "stability.add_variable('u','L/T')\n",
     "stability.add_variable('rho','M/(L**3)')\n",
     "stability.add_variable('mu','M/(L*T)')\n",
     "stability.add_variable('dx','L')\n",
-    "stability.add_variable('dt','T')\n",
+    "stability.add_variable('dt','T',select=True)\n",
     "stability.generate_pi_terms()\n",
     "\n",
     "for piterms in stability.pi_terms:\n",
@@ -308,7 +202,60 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.8"
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "navigate_num": "#000000",
+    "navigate_text": "#333333",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700",
+    "sidebar_border": "#EEEEEE",
+    "wrapper_background": "#FFFFFF"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "49px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false,
+   "widenNotebook": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
