updated the imports and the signature of the function used in the notebooks

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -7,23 +7,25 @@
     "# Buckingham $\\pi$:  Dimensional Analysis\n",
     "**Mokbel Karam, and Prof. Tony Saad (<a href='www.tsaad.net'>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**\n",
     "<hr/>\n",
-    "The allowed physical dimensions from the international system of units are:  Ampere (A), Kelvin (K), second (T), Metre (L), Kilogram (M), Candela (Cd) and Mole (Mol)"
+    "This notebook represents the graphical user interface of the buckingham pi theorem"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7beeab482fb74c81a8cd40d73fe6a586",
+       "model_id": "32023b947ea24b8fbd9906cfda403c6a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(BoundedIntText(value=0, continuous_update=True, description='Number of Variables:', style=Descr…"
+       "HBox(children=(BoundedIntText(value=5, continuous_update=True, description='Number of Variables:', style=Descr…"
       ]
      },
      "metadata": {},
@@ -32,12 +34,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57345743451748b58cfdf2bb0fe4f964",
+       "model_id": "0b5a78d3ae9d4321a30517960514daeb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Button(description='Generate', icon='check', style=ButtonStyle(), tooltip='Generate'),))"
+       "VBox(children=(Box(children=(Textarea(value='', description='Name:', layout=Layout(height='32px', width='auto'…"
       ]
      },
      "metadata": {},
@@ -46,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68be363a694b43c2b97979f4730e383a",
+       "model_id": "27b849aea36e4d88929ada86f6f254a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,9 +62,16 @@
    ],
    "source": [
     "#HIDDEN\n",
-    "from gui.layout import PlotStyling\n",
-    "plty=PlotStyling()"
+    "from src.gui import BuckinghamPiGui\n",
+    "GUI=BuckinghamPiGui()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
