--- a/examples.ipynb
+++ b/examples.ipynb
@@ -81,42 +81,23 @@
      "output_type": "stream",
      "text": [
       "-----------------\n",
-      "dp/(V**2*rho)\n",
-      "L/D\n",
-      "mu/(D*V*rho)\n",
-      "-----------------\n",
-      "D*dp/(V*mu)\n",
-      "D*V*rho/mu\n",
+      "V*mu/(D**3*{\\Delta}p)\n",
       "L/D\n",
       "-----------------\n",
-      "dp/(V**2*rho)\n",
+      "V*mu/(L**3*{\\Delta}p)\n",
       "D/L\n",
-      "mu/(L*V*rho)\n",
       "-----------------\n",
-      "dp/(V**2*rho)\n",
-      "D*V*rho/mu\n",
-      "L*V*rho/mu\n",
-      "-----------------\n",
-      "L*dp/(V*mu)\n",
-      "D/L\n",
-      "L*V*rho/mu\n",
-      "-----------------\n",
-      "D**2*dp*rho/mu**2\n",
-      "D*V*rho/mu\n",
-      "L/D\n",
-      "-----------------\n",
-      "L**2*dp*rho/mu**2\n",
-      "L*V*rho/mu\n",
-      "D/L\n"
+      "D*{\\Delta}p**(1/3)/(V**(1/3)*mu**(1/3))\n",
+      "L*{\\Delta}p**(1/3)/(V**(1/3)*mu**(1/3))\n"
      ]
     }
    ],
    "source": [
     "pipe_flow = BuckinghamPi()\n",
-    "pipe_flow.add_variable(name='dp',expression='m/(l*t**2)',select=True)\n",
-    "pipe_flow.add_variable(name='V',expression='l/t')\n",
+    "pipe_flow.add_variable(name='{\\\\Delta}p',expression='m/(l*t**2)')\n",
+    "pipe_flow.add_variable(name='V',expression='l^(3)/t')\n",
     "pipe_flow.add_variable(name='D',expression='l')\n",
-    "pipe_flow.add_variable(name='rho',expression='m/(l**3)')\n",
+    "# pipe_flow.add_variable(name='rho',expression='m/(l**3)')\n",
     "pipe_flow.add_variable(name='L',expression='l')\n",
     "pipe_flow.add_variable(name='mu',expression='m/(l*t)')\n",
     "# pipe_flow.add_variable(name='e',expression='l')\n",
@@ -126,7 +107,8 @@
     "for piterms in pipe_flow.pi_terms:\n",
     "  print('-----------------')\n",
     "  for term in piterms:\n",
-    "    print(term)"
+    "    print(term)\n",
+    "\n"
    ]
   },
   {
@@ -149,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -157,16 +141,22 @@
      "text": [
       "-----------------\n",
       "dx*rho*u/mu\n",
-      "dt*rho*u**2/mu\n",
+      "dt*mu/(dx**2*rho)\n",
+      "-----------------\n",
+      "sqrt(dt)*sqrt(rho)*u/sqrt(mu)\n",
+      "dx*sqrt(rho)/(sqrt(dt)*sqrt(mu))\n",
+      "-----------------\n",
+      "dt*u/dx\n",
+      "dx**2*rho/(dt*mu)\n",
       "-----------------\n",
       "mu/(dx*rho*u)\n",
       "dt*u/dx\n",
       "-----------------\n",
-      "dx*rho*u/mu\n",
-      "dt*u/dx\n",
+      "mu/(dt*rho*u**2)\n",
+      "dx/(dt*u)\n",
       "-----------------\n",
       "dx*rho*u/mu\n",
-      "dt*mu/(dx**2*rho)\n"
+      "dt*rho*u**2/mu\n"
      ]
     }
    ],
@@ -176,14 +166,59 @@
     "stability.add_variable('rho','M/(L**3)')\n",
     "stability.add_variable('mu','M/(L*T)')\n",
     "stability.add_variable('dx','L')\n",
-    "stability.add_variable('dt','T',select=True)\n",
+    "stability.add_variable('dt','T')\n",
     "stability.generate_pi_terms()\n",
     "\n",
     "for piterms in stability.pi_terms:\n",
     "  print('-----------------')\n",
     "  for term in piterms:\n",
-    "    print(term)\n"
+    "    print(term)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------\n",
+      "R**3*{\\Delta}p/(Q*\\mu)\n",
+      "d/R\n",
+      "-----------------\n",
+      "d**3*{\\Delta}p/(Q*\\mu)\n",
+      "R/d\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.buckinghampi import BuckinghamPi\n",
+    "\n",
+    "Pressure_Drop = BuckinghamPi()\n",
+    "Pressure_Drop.add_variable(name='{\\\\Delta}p',expression='M*L^(-1)*T^(-2)',explicit=True)\n",
+    "Pressure_Drop.add_variable(name='R',expression='L')\n",
+    "Pressure_Drop.add_variable(name='d',expression='L')\n",
+    "Pressure_Drop.add_variable(name='\\\\mu',expression='M*L^(-1)*T^(-1)')\n",
+    "Pressure_Drop.add_variable(name='Q',expression='L^(3)*T^(-1)')\n",
+    "Pressure_Drop.generate_pi_terms()\n",
+    "\n",
+    "for piterms in Pressure_Drop.pi_terms:\n",
+    "  print('-----------------')\n",
+    "  for term in piterms:\n",
+    "    print(term)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
