fixed the notebooks to be used with binder

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -20,40 +20,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32023b947ea24b8fbd9906cfda403c6a",
+       "model_id": "02d9107a4fb04aeaa7b07528a0964a45",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(BoundedIntText(value=5, continuous_update=True, description='Number of Variables:', style=Descr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b5a78d3ae9d4321a30517960514daeb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Box(children=(Textarea(value='', description='Name:', layout=Layout(height='32px', width='auto'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27b849aea36e4d88929ada86f6f254a4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
+       "HBox(children=(BoundedIntText(value=0, continuous_update=True, description='Number of Variables:', style=Descr…"
       ]
      },
      "metadata": {},
@@ -62,8 +34,55 @@
    ],
    "source": [
     "#HIDDEN\n",
-    "from src.gui import BuckinghamPiGui\n",
+    "from buckinghampy import BuckinghamPiGui\n",
     "GUI=BuckinghamPiGui()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------\n",
+      "P*r/(L*{\\omega_{L}})\n",
+      "Y/(L*{\\omega_{L}})\n",
+      "{\\delta}/r\n",
+      "-----------------\n",
+      "P*{\\delta}/(L*{\\omega_{L}})\n",
+      "Y/(L*{\\omega_{L}})\n",
+      "r/{\\delta}\n",
+      "-----------------\n",
+      "P*r/Y\n",
+      "L*{\\omega_{L}}/Y\n",
+      "{\\delta}/r\n",
+      "-----------------\n",
+      "P*{\\delta}/Y\n",
+      "L*{\\omega_{L}}/Y\n",
+      "r/{\\delta}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from buckinghampy import BuckinghamPi\n",
+    "\n",
+    "Econimic_Growth = BuckinghamPi()\n",
+    "Econimic_Growth.add_variable(name='P',expression='K',explicit=True)\n",
+    "Econimic_Growth.add_variable(name='L',expression='Q/T')\n",
+    "Econimic_Growth.add_variable(name='{\\\\omega_{L}}',expression='K/Q')\n",
+    "Econimic_Growth.add_variable(name='Y',expression='K/T')\n",
+    "Econimic_Growth.add_variable(name='r',expression='1/T')\n",
+    "Econimic_Growth.add_variable(name='{\\\\delta}',expression='1/T')\n",
+    "\n",
+    "Econimic_Growth.generate_pi_terms()\n",
+    "\n",
+    "for piterms in Econimic_Growth.pi_terms:\n",
+    "  print('-----------------')\n",
+    "  for term in piterms:\n",
+    "    print(term)\n"
    ]
   },
   {
