--- a/examples.ipynb
+++ b/examples.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.buckinghampi import BuckinghamPi"
+    "from buckinghampy import BuckinghamPi"
    ]
   },
   {
@@ -199,11 +199,11 @@
     "from src.buckinghampi import BuckinghamPi\n",
     "\n",
     "Pressure_Drop = BuckinghamPi()\n",
-    "Pressure_Drop.add_variable(name='{\\\\Delta}p',expression='M*L^(-1)*T^(-2)',explicit=True)\n",
-    "Pressure_Drop.add_variable(name='R',expression='L')\n",
-    "Pressure_Drop.add_variable(name='d',expression='L')\n",
-    "Pressure_Drop.add_variable(name='\\\\mu',expression='M*L^(-1)*T^(-1)')\n",
-    "Pressure_Drop.add_variable(name='Q',expression='L^(3)*T^(-1)')\n",
+    "Pressure_Drop.add_variable(name='{\\\\Delta}p',expression='M*Length^(-1)*T^(-2)',explicit=True)\n",
+    "Pressure_Drop.add_variable(name='R',expression='Length')\n",
+    "Pressure_Drop.add_variable(name='d',expression='Length')\n",
+    "Pressure_Drop.add_variable(name='\\\\mu',expression='M*Length^(-1)*T^(-1)')\n",
+    "Pressure_Drop.add_variable(name='Q',expression='Length^(3)*T^(-1)')\n",
     "Pressure_Drop.generate_pi_terms()\n",
     "\n",
     "for piterms in Pressure_Drop.pi_terms:\n",
@@ -211,6 +211,35 @@
     "  for term in piterms:\n",
     "    print(term)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[m, length, t]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pressure_Drop.fundamental_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.gui import BuckinghamPiGui"
    ]
   },
   {
