updated the examples to match the one in the paper

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -7,12 +7,12 @@
     "# Buckingham $\\pi$:  Dimensional Analysis\n",
     "**Mokbel Karam, and Prof. Tony Saad (<a href='www.tsaad.net'>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**\n",
     "<hr/>\n",
-    "This notebook represents the graphical user interface of the buckingham pi theorem"
+    "This notebook represents the graphical user interface of `buckinghamPy` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -20,12 +20,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02d9107a4fb04aeaa7b07528a0964a45",
+       "model_id": "cdaa816d2ebf4772ad065eae67abc045",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(BoundedIntText(value=0, continuous_update=True, description='Number of Variables:', style=Descr…"
+       "HBox(children=(BoundedIntText(value=6, continuous_update=True, description='Number of Variables:', style=Descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2cb0b024093241be81b1d347c636eeeb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Box(children=(Textarea(value='', description='Name:', layout=Layout(height='32px', width='auto'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f94ad3be273a4929865185ad182b004c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
       ]
      },
      "metadata": {},
@@ -40,49 +68,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------\n",
-      "P*r/(L*{\\omega_{L}})\n",
-      "Y/(L*{\\omega_{L}})\n",
-      "{\\delta}/r\n",
-      "-----------------\n",
-      "P*{\\delta}/(L*{\\omega_{L}})\n",
-      "Y/(L*{\\omega_{L}})\n",
-      "r/{\\delta}\n",
-      "-----------------\n",
-      "P*r/Y\n",
-      "L*{\\omega_{L}}/Y\n",
-      "{\\delta}/r\n",
-      "-----------------\n",
-      "P*{\\delta}/Y\n",
-      "L*{\\omega_{L}}/Y\n",
-      "r/{\\delta}\n"
+      "  sets  Pi 1                               Pi 2                        Pi 3\n",
+      "------  ---------------------------------  --------------------------  ---------------------------------\n",
+      "     1  \\frac{P r}{L {\\omega_{L}}}         \\frac{Y}{L {\\omega_{L}}}    \\frac{{\\delta}}{r}\n",
+      "     2  \\frac{P {\\delta}}{L {\\omega_{L}}}  \\frac{Y}{L {\\omega_{L}}}    \\frac{r}{{\\delta}}\n",
+      "     3  \\frac{P r}{Y}                      \\frac{L {\\omega_{L}}}{Y}    \\frac{{\\delta}}{r}\n",
+      "     4  \\frac{P {\\delta}}{Y}               \\frac{L {\\omega_{L}}}{Y}    \\frac{r}{{\\delta}}\n",
+      "     5  \\frac{L {\\omega_{L}}}{Y}           \\frac{P r}{Y}               \\frac{P {\\delta}}{Y}\n",
+      "     6  \\frac{L {\\omega_{L}}}{P r}         \\frac{Y}{P r}               \\frac{{\\delta}}{r}\n",
+      "     7  \\frac{L {\\omega_{L}}}{P {\\delta}}  \\frac{Y}{P {\\delta}}        \\frac{r}{{\\delta}}\n",
+      "     8  \\frac{Y}{L {\\omega_{L}}}           \\frac{P r}{L {\\omega_{L}}}  \\frac{P {\\delta}}{L {\\omega_{L}}}\n"
      ]
     }
    ],
    "source": [
     "from buckinghampy import BuckinghamPi\n",
     "\n",
-    "Econimic_Growth = BuckinghamPi()\n",
-    "Econimic_Growth.add_variable(name='P',expression='K',explicit=True)\n",
-    "Econimic_Growth.add_variable(name='L',expression='Q/T')\n",
-    "Econimic_Growth.add_variable(name='{\\\\omega_{L}}',expression='K/Q')\n",
-    "Econimic_Growth.add_variable(name='Y',expression='K/T')\n",
-    "Econimic_Growth.add_variable(name='r',expression='1/T')\n",
-    "Econimic_Growth.add_variable(name='{\\\\delta}',expression='1/T')\n",
+    "Economic_Growth = BuckinghamPi()\n",
+    "Economic_Growth.add_variable(name='P',expression='K',explicit=False)\n",
+    "Economic_Growth.add_variable(name='L',expression='Q/T')\n",
+    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',expression='K/Q')\n",
+    "Economic_Growth.add_variable(name='Y',expression='K/T')\n",
+    "Economic_Growth.add_variable(name='r',expression='1/T')\n",
+    "Economic_Growth.add_variable(name='{\\\\delta}',expression='1/T')\n",
     "\n",
-    "Econimic_Growth.generate_pi_terms()\n",
-    "\n",
-    "for piterms in Econimic_Growth.pi_terms:\n",
-    "  print('-----------------')\n",
-    "  for term in piterms:\n",
-    "    print(term)\n"
+    "Economic_Growth.generate_pi_terms()\n",
+    "Economic_Growth.print_all()"
    ]
   },
   {
