--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Buckingham $\\pi$:  Dimensional Analysis\n",
+    "**Mokbel Karam, and Prof. Tony Saad (<a href='www.tsaad.net'>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**\n",
+    "<hr/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,118 +23,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1\n",
-    "---\n",
-    "\n",
-    "Consider the flow of a fluid $A$ that has the following density $\\rho$, and a viscosity $\\mu$ down a pipe of diamtere $D$ and surface roughness $e$ at a mean flow velocity $V$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"https://www.lmnoeng.com/Pressure/Pressure_Drop_dwg.jpg\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Image(url= \"https://www.lmnoeng.com/Pressure/Pressure_Drop_dwg.jpg\")"
+    "In this Jupyter notebook we will execute the code presented in the paper."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are measuring the pressure drop in the pipe between two different position $\\Delta p = p_2 - p_1$ separated by a distance $L$.\n",
-    "$$\\Delta p_L = f(V, D, \\rho, \\mu, L, e)$$"
+    "# Example 1: Pressure Inside a Bubble\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using Buckingham Pi theorem we can reduce the dimensionality of the problem\n",
-    "$$f(V, D, \\rho, \\mu, L, e) \\implies f(\\pi_1, \\pi_2, \\cdots)$$ \n",
-    "where $\\pi_i$ are dimensionless parameters constructed from the original variables."
+    "Using mass, length and time as fundamental physical dimensions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from buckinghampy import BuckinghamPi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------\n",
-      "V*mu/(D**3*{\\Delta}p)\n",
-      "L/D\n",
-      "-----------------\n",
-      "V*mu/(L**3*{\\Delta}p)\n",
-      "D/L\n",
-      "-----------------\n",
-      "D*{\\Delta}p**(1/3)/(V**(1/3)*mu**(1/3))\n",
-      "L*{\\Delta}p**(1/3)/(V**(1/3)*mu**(1/3))\n"
+      "The number of variables has to be greater than the number of physical dimensions.\n"
      ]
     }
    ],
    "source": [
-    "pipe_flow = BuckinghamPi()\n",
-    "pipe_flow.add_variable(name='{\\\\Delta}p',expression='m/(l*t**2)')\n",
-    "pipe_flow.add_variable(name='V',expression='l^(3)/t')\n",
-    "pipe_flow.add_variable(name='D',expression='l')\n",
-    "# pipe_flow.add_variable(name='rho',expression='m/(l**3)')\n",
-    "pipe_flow.add_variable(name='L',expression='l')\n",
-    "pipe_flow.add_variable(name='mu',expression='m/(l*t)')\n",
-    "# pipe_flow.add_variable(name='e',expression='l')\n",
+    "from buckinghampy import BuckinghamPi\n",
     "\n",
-    "pipe_flow.generate_pi_terms()\n",
-    "\n",
-    "for piterms in pipe_flow.pi_terms:\n",
-    "  print('-----------------')\n",
-    "  for term in piterms:\n",
-    "    print(term)\n",
-    "\n"
+    "Pressure_In_Bubble = BuckinghamPi()\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',expression='M*L^(-1)*T^(-2)')\n",
+    "Pressure_In_Bubble.add_variable(name='R',expression='L')\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',expression='M*T^(-2)')\n",
+    "try:\n",
+    "    Pressure_In_Bubble.generate_pi_terms()\n",
+    "    Pressure_In_Bubble.print_all()\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2\n",
-    "---\n",
-    "The stability of a numerical time integrator in a fluid flow simulation for an incompressible flow on a staggered uniform grid is hinged upon the following set of variables:\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using force and length as fundamental physical dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  sets  Pi 1\n",
+      "------  --------------------------\n",
+      "     1  \\frac{\\sigma}{R {\\Delta}p}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from buckinghampy import BuckinghamPi\n",
     "\n",
-    "* Advection velocity: $u \\rightarrow \\frac{L}{T}$\n",
-    "* Density of the fluid: $\\rho \\rightarrow \\frac{M}{L**3}$\n",
-    "* Dynamic viscosity: $\\mu \\rightarrow \\frac{M}{LT}$\n",
-    "* Grid spacing: $\\mathrm{d}x \\rightarrow L$\n",
-    "* Time step: $\\mathrm{d}t \\rightarrow T$\n",
+    "Pressure_In_Bubble = BuckinghamPi()\n",
+    "Pressure_In_Bubble.add_variable(name='{\\\\Delta}p',expression='F*L^(-2)')\n",
+    "Pressure_In_Bubble.add_variable(name='R',expression='L')\n",
+    "Pressure_In_Bubble.add_variable(name='\\\\sigma',expression='F*L^(-1)')\n",
     "\n",
-    "using the Buckingham Pi module we can obtain the dimensionless $\\pi$ terms that describe this example"
+    "Pressure_In_Bubble.generate_pi_terms()\n",
+    "Pressure_In_Bubble.print_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 2: Pressure Drop in a Pipe\n",
+    "---"
    ]
   },
   {
@@ -139,115 +128,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------\n",
-      "dx*rho*u/mu\n",
-      "dt*mu/(dx**2*rho)\n",
-      "-----------------\n",
-      "sqrt(dt)*sqrt(rho)*u/sqrt(mu)\n",
-      "dx*sqrt(rho)/(sqrt(dt)*sqrt(mu))\n",
-      "-----------------\n",
-      "dt*u/dx\n",
-      "dx**2*rho/(dt*mu)\n",
-      "-----------------\n",
-      "mu/(dx*rho*u)\n",
-      "dt*u/dx\n",
-      "-----------------\n",
-      "mu/(dt*rho*u**2)\n",
-      "dx/(dt*u)\n",
-      "-----------------\n",
-      "dx*rho*u/mu\n",
-      "dt*rho*u**2/mu\n"
+      "  sets  Pi 1                                                     Pi 2\n",
+      "------  -------------------------------------------------------  -------------------------------------------------------\n",
+      "     1  \\frac{R}{d}                                              \\frac{Q \\mu}{d^{3} {\\Delta}p}\n",
+      "     2  \\frac{R \\sqrt[3]{{\\Delta}p}}{\\sqrt[3]{Q} \\sqrt[3]{\\mu}}  \\frac{d \\sqrt[3]{{\\Delta}p}}{\\sqrt[3]{Q} \\sqrt[3]{\\mu}}\n",
+      "     3  \\frac{d}{R}                                              \\frac{Q \\mu}{R^{3} {\\Delta}p}\n"
      ]
     }
    ],
    "source": [
-    "stability = BuckinghamPi()\n",
-    "stability.add_variable('u','L/T')\n",
-    "stability.add_variable('rho','M/(L**3)')\n",
-    "stability.add_variable('mu','M/(L*T)')\n",
-    "stability.add_variable('dx','L')\n",
-    "stability.add_variable('dt','T')\n",
-    "stability.generate_pi_terms()\n",
+    "from buckinghampy import BuckinghamPi\n",
     "\n",
-    "for piterms in stability.pi_terms:\n",
-    "  print('-----------------')\n",
-    "  for term in piterms:\n",
-    "    print(term)"
+    "Pressure_Drop = BuckinghamPi()\n",
+    "Pressure_Drop.add_variable(name='{\\\\Delta}p',expression='M*L^(-1)*T^(-2)')\n",
+    "Pressure_Drop.add_variable(name='R',expression='L')\n",
+    "Pressure_Drop.add_variable(name='d',expression='L')\n",
+    "Pressure_Drop.add_variable(name='\\\\mu',expression='M*L^(-1)*T^(-1)')\n",
+    "Pressure_Drop.add_variable(name='Q',expression='L^(3)*T^(-1)')\n",
+    "\n",
+    "Pressure_Drop.generate_pi_terms()\n",
+    "Pressure_Drop.print_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 3: Economic Growth\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------\n",
-      "R**3*{\\Delta}p/(Q*\\mu)\n",
-      "d/R\n",
-      "-----------------\n",
-      "d**3*{\\Delta}p/(Q*\\mu)\n",
-      "R/d\n"
+      "  sets  Pi 1                               Pi 2                      Pi 3\n",
+      "------  ---------------------------------  ------------------------  ------------------\n",
+      "     1  \\frac{P r}{L {\\omega_{L}}}         \\frac{Y}{L {\\omega_{L}}}  \\frac{{\\delta}}{r}\n",
+      "     2  \\frac{P {\\delta}}{L {\\omega_{L}}}  \\frac{Y}{L {\\omega_{L}}}  \\frac{r}{{\\delta}}\n",
+      "     3  \\frac{P r}{Y}                      \\frac{L {\\omega_{L}}}{Y}  \\frac{{\\delta}}{r}\n",
+      "     4  \\frac{P {\\delta}}{Y}               \\frac{L {\\omega_{L}}}{Y}  \\frac{r}{{\\delta}}\n"
      ]
     }
    ],
    "source": [
-    "from src.buckinghampi import BuckinghamPi\n",
+    "from buckinghampy import BuckinghamPi\n",
     "\n",
-    "Pressure_Drop = BuckinghamPi()\n",
-    "Pressure_Drop.add_variable(name='{\\\\Delta}p',expression='M*Length^(-1)*T^(-2)',explicit=True)\n",
-    "Pressure_Drop.add_variable(name='R',expression='Length')\n",
-    "Pressure_Drop.add_variable(name='d',expression='Length')\n",
-    "Pressure_Drop.add_variable(name='\\\\mu',expression='M*Length^(-1)*T^(-1)')\n",
-    "Pressure_Drop.add_variable(name='Q',expression='Length^(3)*T^(-1)')\n",
-    "Pressure_Drop.generate_pi_terms()\n",
+    "Economic_Growth = BuckinghamPi()\n",
+    "Economic_Growth.add_variable(name='P',expression='K',explicit=True)\n",
+    "Economic_Growth.add_variable(name='L',expression='Q/T')\n",
+    "Economic_Growth.add_variable(name='{\\\\omega_{L}}',expression='K/Q')\n",
+    "Economic_Growth.add_variable(name='Y',expression='K/T')\n",
+    "Economic_Growth.add_variable(name='r',expression='1/T')\n",
+    "Economic_Growth.add_variable(name='{\\\\delta}',expression='1/T')\n",
     "\n",
-    "for piterms in Pressure_Drop.pi_terms:\n",
-    "  print('-----------------')\n",
-    "  for term in piterms:\n",
-    "    print(term)\n",
-    "\n"
+    "Economic_Growth.generate_pi_terms()\n",
+    "Economic_Growth.print_all()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[m, length, t]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Pressure_Drop.fundamental_variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.gui import BuckinghamPiGui"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
